# backtesting

./: pyproject.toml
docs/: main.md
notebooks/: example_1.ipynb  example_2.ipynb
notebooks/data/: 1000BTTUSDT.csv  1000BTTUSDT_full.csv
